css/style.css
/* ... */
.indppl-single-store-container {
  -webkit-box-shadow: 2px 3px 3px 0px rgba(0,0,0,0.5);
  -moz-box-shadow: 2px 3px 3px 0px rgba(0,0,0,0.5);
  box-shadow: 2px 3px 3px 0px rgba(0,0,0,0.5);
  margin: 20px 0;
}
.indppl-small-header{
  height: 60px;
}
.indppl-small-header img{
  width: 300px;
  max-width: 80%;
}
.flex-half{
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: baseline;
}
.flex-half-text{
  justify-content: start;
}
.indppl-small-title, .indppl-small-store-text{
  margin-bottom: 0;
}
.indppl-small-title{
  font-weight: 600;
}
.indppl-small-store-link, .indppl-small-store-perma-link, .indppl-duplicate-store, .indppl-store-auth, .indppl-delete-store, .delete-store-yes, .delete-store-no{
  padding-top: 0PX;
  Padding-bottom: 0px;
  width: 40%;
  height: 30px;
  padding-top: 4px!important;
  margin-top: 5px;
  text-align: center;
}
.indppl-delete-store, .width-50{
  width: 50%;
}
.min-width-90{
  min-width: 90%;
}
.store-locate-inside-container{
  padding-bottom: 40px;
  border-radius: 15px;
}
.store-delete-header, .container-overlap-header{
  text-align: center;
}
.store-delete-button-container{
  justify-content: space-between;
  width: 80%;
  margin: auto;
  margin-top: 70px;
}
.store-delete-modal, .container-date-overlap-modal{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
  top: 0;
  left: 0;
  z-index: 9999;
  position: fixed;
}
.store-delete-modal-inside, .container-date-overlap-modal-inside{
  max-width: 500px;
  width: 30vw;
  /* height: 400px; */
  background: white;
  border-radius: 10px;
  padding: 30px;
  border: black 1px solid;
}
.indppl-overlap-ok-container{
  display: flex;
  justify-content: center;

}
.indppl-small-store-link, .indppl-delete-store{
  margin-left: 5px;
}
.status-for-business{
  position: absolute;
  bottom: 35px;
  width: 150px;
}
.color-grey{
  background: grey;
  border-radius: 15px;
  padding: 2px 10px;
  margin-bottom: 0;
  margin-top: 5px;
}
.indppl-store-thumb{
  padding-right: 5px;
}

.indppl-add-store-centered, .indppl-add-sponsor-centered{
  border: #e6561a 3px solid;
  width: 100%;
  height: auto;
  transition: background 0.35s ease-in-out, color 0.35s ease-in-out, font-size 0.35s ease-in-out;
}
.indppl-add-sponsor-centered{
  width: 100%;
  height: 100%;
}
.indppl-add-store-centered:hover, .icon--plus:hover, .indppl-add-sponsor-centered:hover{
  background: #e6561a;
  color: white;
}

.icon--plus{
  transition: background 0.35s ease-in-out, color 0.35s ease-in-out, font-size 0.35s ease-in-out;
  background: white;
}
.icon--plus > path{
  transition: fill 0.35s ease-in-out, color 0.35s ease-in-out, font-size 0.35s ease-in-out;
  fill: #e6561a;
}
.indppl-add-store-centered:hover svg path, .indppl-add-sponsor-centered:hover svg path{
  fill:white;
}
.indppl-add-store-text, .indppl-add-sponsor-text{
  color: #34602f;
  font-weight: 600;
  text-align: center;
}
.indppl-add-store-link{
  width:50px;
}
.indppl-containers-table{
  width:100%;
  position: relative;
}
.container-button-container{
  padding-top: 50px;
}
.indppl-season-boarders{
  border-left: 10px solid white;
  border-right: 10px solid white;
  padding-right: 20px;
}
input.container-date{
  padding-left: 36px!important;
  max-width: 92px;
}
.container-date-col{
  padding-right: 10px;
  width: 150px;
  color: #1ab1ec;
}
.container-date-container{
  display: flex;
  margin: 2.5px;
}
span.padding-right-5{
  flex-basis: 50%;
  color: #1ab1ec;
}
.padding-right-5{
  padding-right: 5px;
}
.indppl-container-edit-title{
  width: 80%!important;
  position: relative;
  top: -41px;
}
.indppl-dot-container, .indppl-no-dot-container{
  margin-left: 50%;
  margin-top: 5px;
  margin-bottom: 5px;
  line-height: 0;
}
.container-submit, .margin-top-20{
  margin-top: 20px;
}
.display-none{
  display:none;
}
.indppl-table-color-offset:nth-of-type(even), .offset-background, .slide-in-products-container{
  /* background: rgba(151, 180, 210, 0.28); */
  background: #eff7ed;
}
.margin-0{
  margin: 0;
}
.indppl-cal-img{
  position: absolute;
  padding-top: 5px;
  padding-left: 5px;
  width:23px;
  pointer-events: none;
}
/* .padding-bottom-5{
  padding-bottom:5px;
} */

.guide-product-instructions img{
  width: 100%;
}
.next-button-error{
  position: fixed;
  bottom: -9px;
  color: red;
  font-weight: 800;
  text-decoration: none;
  font-size: 1.2em;
}
.next-button,
.next-button:focus,
.next-button:active,
input[type=submit].next-button:focus,
input[type=submit].next-button:active{
  max-width: 50vw;
  width: 300px;
  text-align: center;
}

input[type=submit].next-button:hover{
  
}

.next-button-bottom{
  position: absolute!important;
  bottom: -90px!important;
}
p.round-button-error{
  font-weight: 800;
  color:red!important;
  text-decoration: none;
  font-size: 1.2em;
  margin-bottom:0;
}
.color-red, .duplicate-required-fill, .next-button-error, .round-button-error{
  color:red!important;
  text-decoration: none;
}
.duplicate-required-fill{
  height: 0;
  float: right;
  position: relative;
  top: -33px;
  right: 5px;
}
.color-green{
  color: green;
  text-decoration: none;
}
.container-limit{
  padding-left: 20px;
  /* text-decoration: none; */
}
.container-limit:hover{
  text-decoration: none;
}
.indppl-product-pots-edit, .indppl-product-delete, .indppl-product-edit{
  color:#e6561a;
}
.indppl-product-pots-edit:hover, .indppl-product-delete:hover, .indppl-product-edit:hover{
  color:#f26226;
}
.checkmark, .checkmark-products {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  display: block;
  stroke-width: 1;
  stroke: green;
  stroke-miterlimit: 10;
  stroke-dashoffset: 0;
  margin: 0;
}
.checkmark-products{
  height: 18px;
}
.products-table{
  width: 100%;
}
.container-available-check{
  position: relative;
  left: -42px;
  top: 0px;
}
.padding-left-40{
  padding-left: 40px;
}
.check-box{
  fill: none;
  stroke-width: 1;
  stroke: #9c9b9b;
}
.container-title{
  position: relative;
  margin-top: 6px;
}
/* ... */

